static/css/styles.css
/* ... */
#about-container::-webkit-scrollbar {
  display: none;
}

#about-title {
  position: sticky;
  top: 0;
  z-index: 10;
  backdrop-filter: blur(7px);
  background-image: linear-gradient(to bottom, #ffffffc1, #fdfdfd4e 50%);
}

#about-container ol > li {
  list-style-type: none;
  counter-increment: item;
}

#about-container ol > li:before {
  content: counter(item);
  margin-right: 0.3em;
  font-family: "Noto Color Emoji";
  font-size: 1.2em;
  font-weight: bold;
}

#about-container ul li {
  list-style-type: none;
  line-height: 1.5em;
}

#about-container ul li:before {
  content: "-";
  font-size: 130%;
  font-weight: 900;
  line-height: 0;
  margin-right: 0.2em;
  position: relative;
  top: 0.08rem;
  color: #2fadd3;
  z-index: 5;
}

#about-footer {
  font-size: 1.2rem;
}

/******** CONTACT ********/

#contact-main {
  width: 50%;
  max-width: 500px;
  min-width: 300px;
  height: 400;
  background-color: #fffdf9e9;
  overflow-y: hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#contact-main::-webkit-scrollbar {
  display: none;
}

#contact-check, .form-check-input {
  margin-right: 10px !important;
}

radio:hover {
  cursor: pointer !important;
}

/******** PROFILE ********/

#profile-container {
  width: 60%;
  min-width: 350px;
  max-width: 450px;
  height: 400;
  background-color: #fffdf9e9;
}

.profile-form-input {
  margin: 7px 0;
}

/******** LOGIN ********/

#login-wrapper,
#signup-wrapper {
  margin: auto;
  width: 50%;
  max-width: 400px;
  min-width: 300px;
  background-color: #fffdf9e9;
}

#login-wrapper {
  height: 430px;
}

#login-btn-div {
  position: relative;
  top: 75px;
}

.auth-link a {
  text-decoration: none;
  color: #37a9c9 !important;
  font-weight: 900;
  font-size: 1.3em;
}

.auth-link a:hover {
  color: #e88686 !important;
}

/******** SIGNUP ********/

#signup-wrapper {
  height: 550px;
}

#pass-reqs {
  text-align: center;
  display: inline-block;
}

#pass-reqs li {
  text-align: left;
  font-size: 0.8em;
  list-style-type: "\2610   ";
}

.unchecked {
  list-style-type: "\2610   ";
}

.checked::marker {
  /* content: "✓   "; */
  content: "\2713   ";
  color: green;
}

/******** SIGNOUT ********/

#signout-container {
  width: 45%;
  min-width: 308px;
  max-width: 450px;
  height: 40%;
  min-height: 175px;
  margin: 100px auto;
  background-color: #fffdf9e9;
}


#signout-btn-div {
  margin-top: 15%;
}

/******** GREET ********/

#greeting-msg-row, #greet-link {
  position: relative;
}

#greeting-feeling {
  font-size: .90em;
  display: inline-block;
  min-width: 340px;
}

#greet-info {
  visibility: hidden;
  position: absolute;
  top: -7px;
  left: -15px;
  z-index: 10;
  height: 20px;
  width: 110px;
  border-radius: 8px;
  background-color: #fffdf956;
  backdrop-filter: blur(7px);
  letter-spacing: 0;
  font-size: .7em;
}

#greet-link:hover #greet-info {
  cursor: pointer;
  visibility: visible;
}

#emotion-link,
#message-link a {
  text-decoration: none;
  color: #e88686;
  font-weight: bolder;
  font-size: 1.15em;
  margin-left: 1px;
}

#emotion-link:hover, #message-link a:hover {
  color: #37a9c9 !important;
}

/******** USER MSG ********/

#user-msg-wrapper {
  min-height: 3em;
}

#msg-center {
  width: 98%;
  background-image: linear-gradient( #fffdf956, #fffdf956, #fffdf956);
  backdrop-filter: blur(7px);
}

.test {
  -webkit-animation: 2s highlight 200ms 1 normal forwards;
          animation: 2s highlight 200ms 1 normal forwards;
  background-color: none;
  background: linear-gradient(90deg, #ffffc2df 50%, transparent 50%);
  background-size: 200% 100%;
  background-position: 100% 0;
  /* #ffd0bf8a */
}

@-webkit-keyframes highlight {
  to {
    background-position: 0 0;
  }
}

@keyframes highlight {
  to {
    background-position: 0 0;
  }
}

/******** FEELINGS ********/

#feelings-wrapper {
  height: 100%;
  width: 100%;
  margin-top: 1.5rem;
  background-color: transparent;
}

#feelings-form {
  margin: 0 auto;
  min-height: 367px;
  width: 100%;
  background-color: #fffdf9b8;
}

#feelings-form .feel-select {
  display: flex;
  justify-content: center;
  padding-top: 5px;
  margin-left: 1em;
}

#feelings-form .feel-select select {
  flex-basis: 50%;
}

#feeling-cancel {
  display: flex;
  justify-content: center;
}

#feelings-form h5 {
  margin-top: .8em;
  margin-left: 2em;
}

.feelings-select {
  color: #606060 !important;
  background-color: #ffe0ca22 !important;
  font-size: 1.1em!important;
  font-weight: 700 !important;
}

/******** CONFIRM FEELING ********/

#confirm-wrapper {
  position: absolute;
  top: -70%;
  left: 45%;
  height: 75px;
  width: 200px;
  background-color: #fffdf947;
  backdrop-filter: blur(7px);
  z-index: 10;
}

/******** QUOTE ********/

#quote-wrapper {
  width: 90%;
  background-image: linear-gradient(
    to bottom,
    #fffdf9d5,
    #fffdf9b9 50%,
    #fffdf99c 60%,
    #fffdf985 63%,
    #fffdf956 83%,
    #fffdf92d 93%,
    #fffdf913 98%
  );
}

/******** HUB ********/

#hub-wrapper {
  position: relative;
  min-width: 350px;
  max-width: 560px;
  height: 100%;
  min-height: 564px;
  padding: 0;
  margin-top: 2em;
  background-color: #fffdf9e9;
}

#hub-nav {
  width: 100%;
  height: 3em;
  margin-bottom: 15px;
  background-color: #fffdf9e9 !important;
}

.hub-btn {
  background-color: #37a9c956 !important;
}


.hub-active {
  background-color: #fef2ddfa !important;
  color: #e88686 !important;
}

.hub-link a {
  text-decoration: none;
  font-weight: 600;
  color: #606060;
  font-size: 1.1rem;
  margin: 0 2px;
  white-space: nowrap;
}

.add-entry {
  display:flex;
  justify-content: center;
  height: 64px;
}

.icon-container {
  display:flex;
  justify-content: center;
}

#journal-container, #hub-content, #milestone-bar-container {
  width: 100%;
  height: 100%;
  background-color: #fffdf9e9;
  overflow: hidden;
}

#journal-wrapper {
  height: 55vh;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
  background-color: #fffdf9e9;
}
/* ... */

